--- a/docs/content/developer/evm-to-move/tooling-apis.mdx
+++ b/docs/content/developer/evm-to-move/tooling-apis.mdx
@@ -46,7 +46,7 @@ IOTA Move comes with a comprehensive JSON-RPC API, similar to the ones offered f
 
 ## Editors
 
-Like with Solidity and Hardhat, you can write IOTA Move code in any editor, in combination with the CLI utilities, But the recommended editor to get the most out of the experience is VSCode as well in combination with the [Move](https://marketplace.visualstudio.com/items?itemName=mysten.move) extension. This will add language support for Move to VSCode, allowing you to instantly see any mistakes made with inline code validation, go-to support, and more, offering a similar editor experience to the one for EVM.
+Like with Solidity and Hardhat, you can write IOTA Move code in any editor, in combination with the CLI utilities, But the recommended editor to get the most out of the experience is VSCode as well in combination with the [Move](https://marketplace.visualstudio.com/items?itemName=iota.move) extension. This will add language support for Move to VSCode, allowing you to instantly see any mistakes made with inline code validation, go-to support, and more, offering a similar editor experience to the one for EVM.
 
 ## Conclusion
 
