--- a/docs/content/developer/stardust/claiming/basic.mdx
+++ b/docs/content/developer/stardust/claiming/basic.mdx
@@ -4,6 +4,13 @@ description: A guide on how to claim Basic Outputs in Move by assessing and unlo
 
 # Claiming Basic Outputs
 
+
+:::info Claiming might not be needed
+
+Most basic outputs have no special unlock conditions and don't need to be claimed. They will simply be available as normal `Coin<IOTA>` objects for your account with no further action required. Manual claiming is only needed if special unlock conditions like unexpired timelocks apply.
+
+:::
+
 As a user, you may own `BasicOutput` objects that need to be unlocked before you can claim them. This guide walks you through the process of evaluating the unlock conditions for a `BasicOutput` and the steps to claim the associated assets.
 
 ## Assessing Unlock Conditions
