--- a/docs/content/developer/iota-101/iota-move-concepts/iota-move-concepts.mdx
+++ b/docs/content/developer/iota-101/iota-move-concepts/iota-move-concepts.mdx
@@ -12,7 +12,7 @@ You can use Move to define, create, and manage programmable IOTA objects represe
 ## Move on IOTA
 
 
-Move on IOTA contains some important differences from Move on other blockchains. IOTA takes advantage of Move's security and flexibility and enhances it with the features described in the following sections to vastly improve throughput, reduce delays in finality, and make Move programming more approachable. For full details, see the [IOTA Smart Contracts Platform](/doc/iota.pdf) white paper.
+Move on IOTA contains some important differences from Move on other blockchains. IOTA takes advantage of Move's security and flexibility and enhances it with the features described in the following sections to vastly improve throughput, reduce delays in finality, and make Move programming more approachable.
 
 
 :::tip
