--- a/docs/content/developer/getting-started/client-tssdk.mdx
+++ b/docs/content/developer/getting-started/client-tssdk.mdx
@@ -97,14 +97,14 @@ ReactDOM.createRoot(document.getElementById('root')!).render(
 ```
 <AlphaNet />
 
-### `IOTAClientProvider`
+### `IotaClientProvider`
 
-Next, set up the `IOTAClientProvider`. This `Provider` delivers an `IOTAClient` instance from `@iota/iota.js` to all the
+Next, set up the `IotaClientProvider`. This `Provider` delivers an `IOTAClient` instance from `@iota/iota.js` to all the
 hooks in dApp Kit. This provider manages which network dApp Kit connects to and can accept configurations for multiple
 networks. In this exercise, you'll connect to `devnet`.
 
 ```ts
-import { IOTAClientProvider } from '@iota/dapp-kit';
+import { IotaClientProvider } from '@iota/dapp-kit';
 import { getFullnodeUrl } from '@iota/iota-sdk/client';
 import { QueryClient, QueryClientProvider } from '@tanstack/react-query';
 
@@ -117,9 +117,9 @@ const networks = {
 ReactDOM.createRoot(document.getElementById('root')!).render(
 	<React.StrictMode>
 		<QueryClientProvider client={queryClient}>
-			<IOTAClientProvider networks={networks} defaultNetwork="devnet">
+			<IotaClientProvider networks={networks} defaultNetwork="devnet">
 				<App />
-			</IOTAClientProvider>
+			</IotaClientProvider>
 		</QueryClientProvider>
 	</React.StrictMode>,
 );
@@ -133,7 +133,7 @@ Finally, set up the `WalletProvider` from `@iota/dapp-kit`, and import styles fo
 ```ts
 import '@iota/dapp-kit/dist/index.css';
 
-import { IOTAClientProvider, WalletProvider } from '@iota/dapp-kit';
+import { IotaClientProvider, WalletProvider } from '@iota/dapp-kit';
 import { getFullnodeUrl } from '@iota/iota-sdk/client';
 import { QueryClient, QueryClientProvider } from '@tanstack/react-query';
 
@@ -146,11 +146,11 @@ const networks = {
 ReactDOM.createRoot(document.getElementById('root')!).render(
 	<React.StrictMode>
 		<QueryClientProvider client={queryClient}>
-			<IOTAClientProvider networks={networks} defaultNetwork="devnet">
+			<IotaClientProvider networks={networks} defaultNetwork="devnet">
 				<WalletProvider>
 					<App />
 				</WalletProvider>
-			</IOTAClientProvider>
+			</IotaClientProvider>
 		</QueryClientProvider>
 	</React.StrictMode>,
 );
