feat(devx): add warning

--- a/docs/content/developer/stardust/claiming.mdx
+++ b/docs/content/developer/stardust/claiming.mdx
@@ -1,8 +1,11 @@
 ---
 description: How to access the migrated Stardust assets and tokens 
 ---
+import MigrationWarning from '../../_snippets/migration-warning.mdx';
 
 # Claiming Stardust Assets
+
+<MigrationWarning/ >
 
 As detailed in the [Stardust Move Models](move-models.mdx), Stardust assets are represented as Move objects within the ledger. Claiming these assets involves enabling original owners to utilize a [Programmable Transaction Block](../iota-101/transactions/ptb/prog-txn-blocks.mdx) to "unlock" assets such as IOTA, Shimmer, custom [`Coin`](../../references/framework/iota-framework/coin.mdx#resource-coin)s, or even `Alias` and `Nft` objects.
 
