--- a/docs/content/developer/stardust/claiming/address-unlock-condition.mdx
+++ b/docs/content/developer/stardust/claiming/address-unlock-condition.mdx
@@ -1,8 +1,11 @@
 ---
 description: A guide on how to claim Outputs Unlockable by an Alias/NFT Address in the Move-based IOTA ledger.
 ---
+import MigrationWarning from '../../../_snippets/migration-warning.mdx';
 
 # Claiming an Output Unlockable by an Alias/NFT Address
+
+<MigrationWarning/ >
 
 In Stardust, outputs had an Address Unlock Condition or, in the case of Alias Outputs, 
 a [Governor Address Unlock Condition](https://github.com/iotaledger/tips/blob/main/tips/TIP-0018/tip-0018.md#governor-address-unlock-condition). 
