--- a/docs/content/developer/stardust/claiming/alias.mdx
+++ b/docs/content/developer/stardust/claiming/alias.mdx
@@ -2,7 +2,11 @@
 description: A guide on how to claim Alias Outputs in the Move-based IOTA ledger.
 ---
 
+import MigrationWarning from '../../../_snippets/migration-warning.mdx';
+
 # Claiming Alias Outputs
+
+<MigrationWarning/ >
 
 An address can own `AliasOutput` objects only if it was set as the Alias Governor Address before the migration. 
 In this case, the `AliasOutput` object is an owned object in the ledger, and its owner is the Governor address.
