--- a/docs/content/developer/stardust/claiming/basic.mdx
+++ b/docs/content/developer/stardust/claiming/basic.mdx
@@ -2,8 +2,11 @@
 description: A guide on how to claim Basic Outputs in Move by assessing and unlocking owned objects.
 ---
 
+import MigrationWarning from '../../../_snippets/migration-warning.mdx';
+
 # Claiming Basic Outputs
 
+<MigrationWarning/ >
 
 :::info Claiming might not be needed
 
