--- a/docs/content/developer/stardust/claiming/nft.mdx
+++ b/docs/content/developer/stardust/claiming/nft.mdx
@@ -2,7 +2,11 @@
 description: A guide on how to claim and convert NFT Outputs in the Move-based IOTA ledger.
 ---
 
+import MigrationWarning from '../../../_snippets/migration-warning.mdx';
+
 # Claiming NFT Outputs
+
+<MigrationWarning/ >
 
 As an owner of `NftOutput` objects, you may need to unlock these assets before you can claim them. 
 This guide will help you understand how to evaluate the unlock conditions for an `NftOutput` and proceed with claiming the associated NFT.
