--- a/docs/content/developer/stardust/claiming/self-sponsor.mdx
+++ b/docs/content/developer/stardust/claiming/self-sponsor.mdx
@@ -2,7 +2,11 @@
 description: A guide to claiming Shimmer assets using self-sponsorship when the address lacks IOTA coins for transaction fees.
 ---
 
+import MigrationWarning from '../../../_snippets/migration-warning.mdx';
+
 # Self-Sponsoring Shimmer Assets Claims
+
+<MigrationWarning/ >
 
 If you own Shimmer assets but don't have any IOTA coins to cover transaction fees, 
 self-sponsorship can help you claim those assets.
