--- a/docs/content/developer/stardust/addresses.mdx
+++ b/docs/content/developer/stardust/addresses.mdx
@@ -2,6 +2,9 @@
 title: Addresses and Keys
 description: Explains how "previous" addresses are treated in the new ledger
 ---
+import MigrationWarning from '../../_snippets/migration-warning.mdx';
+
+<MigrationWarning/ >
 
 ## Addresses
 
