--- a/docs/content/developer/stardust/migration-process.mdx
+++ b/docs/content/developer/stardust/migration-process.mdx
@@ -2,6 +2,9 @@
 title: Migration Process
 description: Explains how IOTA and Shimmer assets are handled during migration
 ---
+import MigrationWarning from '../../_snippets/migration-warning.mdx';
+
+<MigrationWarning/ >
 
 :::note Edge Cases
 
