--- a/docs/content/developer/stardust/units.mdx
+++ b/docs/content/developer/stardust/units.mdx
@@ -2,6 +2,9 @@
 title: Units and Conversions
 description: Explains the units for IOTA and Shimmer tokens
 ---
+import MigrationWarning from '../../_snippets/migration-warning.mdx';
+
+<MigrationWarning/ >
 
 ## IOTA
 
