fix(docs): wrong md link

--- a/docs/content/about-iota/tokenomics/proof-of-stake.mdx
+++ b/docs/content/about-iota/tokenomics/proof-of-stake.mdx
@@ -14,7 +14,7 @@ IOTA token holders are free to withdraw their IOTA or to change their selected v
 ## Economic model {#economic-model}
 
 This section covers how the different components of the IOTA economy interact with each other to introduce the IOTA DPoS system. 
-For reference, see the Staking and Tokenomics diagram in the [IOTA Tokenomics](../tokenomics.mdx) overview.
+For reference, see the Staking and Tokenomics diagram in the [IOTA Tokenomics](./tokenomics.mdx) overview.
 The IOTA economic model works as follows.
 
 At the beginning of each epoch, two important events happen:
