feat(devx): renamed containing folder to match the section title

--- a/docs/content/developer/iota-101/move-overview/move-on-iota.mdx
+++ b/docs/content/developer/iota-101/move-overview/move-on-iota.mdx
@@ -4,5 +4,5 @@ description: The Move language has additional benefits on the IOTA blockchain th
 draft: true
 ---
 
-Content moved to iota-move-concepts
+Content moved to move-overview
 
