--- a/docs/content/about-iota/execution-architecture/execution-layer.mdx
+++ b/docs/content/about-iota/execution-architecture/execution-layer.mdx
@@ -6,6 +6,7 @@ description: This document describes the architectural approach for iota executi
 The execution layer is one of the main components of the IOTA architecture.
 
 It includes:
-- [Execution crate](iota-execution.mdx).
-- [MoveVM](adapter.mdx#move-vm).
-- [Framework](../../references/framework.mdx).
+- The [IOTA Execution Crate](iota-execution.mdx).
+- The [Adapter](adapter.mdx) and the [MoveVM](adapter.mdx#move-vm).
+- The [Native Functions & Object Runtime](natives.mdx).
+- The [IOTA Framework](../../references/framework.mdx).
