--- a/docs/content/about-iota/execution-architecture/iota-execution.mdx
+++ b/docs/content/about-iota/execution-architecture/iota-execution.mdx
@@ -7,5 +7,6 @@ description: This document describes the architectural approach for iota executi
 
 The IOTA Execution Architecture, depicted in the included architectural diagram, outlines the technical approach for the iota execution crate to have a general view of component interaction. 
 The following diagram is a visual representation of the iota_execution crate with its subcrates ([iota_adapter](adapter.mdx), [iota_move_natives](natives.mdx), iota_verifier).
+The main purposes of iota execution are executing transactions (including PTBs), gas accounting, and supporting native functions.
 
 ![IOTA Execution Architecture](/img/concepts/execution-architecture/iota-execution.svg)
