--- a/docs/content/developer/iota-101/move-overview/move-overview.mdx
+++ b/docs/content/developer/iota-101/move-overview/move-overview.mdx
@@ -7,86 +7,98 @@ import MoveSummary from "../../../_snippets/move-summary.mdx";
 
 <MoveSummary />
 
-You can use Move to define, create, and manage programmable IOTA objects representing user-level assets. IOTA's object system is implemented by adding new functionality to Move while also imposing additional restrictions. See [Object Model](./../objects/object-model.mdx) for more details.
+Move allows you to define, create, and manage programmable IOTA [objects](./../objects/object-model.mdx) that represent user-level assets. The IOTA object system enhances Move by introducing new functionality while also adding convenient safety restrictions.
 
 ## Move on IOTA
 
 
-Move on IOTA contains some important differences from Move on other blockchains. IOTA takes advantage of Move's security and flexibility and enhances it with the features described in the following sections to vastly improve throughput, reduce delays in finality, and make Move programming more approachable.
-
+Move on IOTA introduces several key differences compared to its implementation on other blockchains.
+While IOTA leverages Move's inherent security and flexibility,
+it enhances the language with additional features to significantly improve throughput,
+reduce finality delays, and make Move programming more accessible.
 
 :::tip
 
-Where the IOTA documentation refers to the Move language, the content is documenting the specific Move implementation on the IOTA blockchain. If relevant, the documentation expressly refers to the original use case for the Move language as Move on Diem.
+When IOTA documentation mentions the Move language, it specifically refers to the Move implementation on the IOTA blockchain. If applicable, the documentation explicitly references the original Move use case, known as Move on Diem.
 
 :::
 
-In general, Move on Diem code written for other systems works in IOTA with these exceptions:
+## Compatibility
+
+Generally, Move code written for Diem is compatible with IOTA, with the following exceptions:
 
 - [Global storage operators](https://move-language.github.io/move/global-storage-operators.html)
 - [Key abilities](https://github.com/move-language/move/blob/main/language/documentation/book/src/abilities.md)
 
 ## Key differences
 
-Key differences with Move on IOTA include:
 
-- IOTA uses its own [object-centric global storage](#object-centric-global-storage)
-- Addresses represent [Object IDs](#addresses-represent-object-ids)
-- IOTA objects have [globally unique IDs](#object-with-key-ability-globally-unique-ids)
-- IOTA has [module initializers](#module-initializers) (init)
-- IOTA [entry points](#entry-points-take-object-references-as-input) take object references as input
+Move on IOTA introduces several key differences compared to its implementation on other blockchains.
+These enhancements improve scalability, security, and flexibility,
+making Move programming more efficient and accessible on the IOTA platform.
+Below, you'll find an overview of the key differences and features unique to Move on IOTA.
 
-### Object-centric global storage
+### Object-Centric Global Storage
 
-In Move on Diem, global storage is part of the programming model. Resources and modules are held in global storage, owned by an account which has an address. Transactions are free to access resources from any account in global storage when they run, using special operations such as `move_to` and `move_from`.
+In Move on Diem, global storage is integral to the programming model,
+with resources and modules stored globally and owned by an account with an address.
+Transactions can freely access resources from any account using operations like `move_to` and `move_from`.
 
-This approach introduces a scaling issue, as it is not possible to statically determine which transactions are contending over the same resource and which are not.  This is similar to the scaling issues faced by other blockchains where smart contracts typically store account information in large, internal mappings, which limit throughput.
+This model, however, presents a scaling challenge,
+as it's difficult to determine which transactions might contend over the same resource.
+This issue is common among blockchains where smart contracts store account information in large, internal mappings,
+limiting throughput.
 
-Move on IOTA addresses the scaling issue by not having global storage, or its related operations. When objects (in contrast to resources) and packages (sets of modules) are stored on IOTA, they are each given unique identifiers.  All a transaction's inputs are explicitly specified up-front using these unique identifiers, to allow the chain to schedule transactions with non-overlapping inputs in parallel.
+Move on IOTA addresses this scaling issue by eliminating global storage and its related operations.
+Instead, objects (as opposed to resources) and packages (sets of modules) stored on IOTA are each assigned unique identifiers. All inputs for a transaction are explicitly specified upfront using these unique identifiers, allowing the chain to schedule transactions with non-overlapping inputs to run in parallel.
 
-### Addresses represent Object IDs
+### Addresses Represent Object IDs
 
-In Move on Diem, there is a 16-byte `address` type used to represent account addresses in global storage. A 16 byte address is sufficient for the Move on Diem security model.
+In Move on Diem, a 16-byte `address` type represents account addresses in global storage, sufficient for the Diem security model.
 
-IOTA doesn't have global storage, so `address` is re-purposed as a 32-byte identifier used for both objects and accounts. Each transaction is signed by an account (the "sender") that is accessible from the transaction context, and each object stores its `address` wrapped in its `id: UID` field. (Refer to [object.move](https://github.com/iotaledger/iota/tree/develop/crates/iota-framework/packages/iota-framework/sources/object.move) in the IOTA framework for details).
+IOTA repurposes the `address` type as a 32-byte identifier used for both objects and accounts. Transactions are signed by an account (the "sender") accessible from the transaction context, and each object stores its `address` wrapped in its `id: UID` field. For more details, refer to the [object.move](https://github.com/iotaledger/iota/tree/develop/crates/iota-framework/packages/iota-framework/sources/object.move) file in the IOTA framework.
 
-### Object with key ability, globally unique IDs
+### Objects with Key Ability and Globally Unique IDs
 
-In Move on Diem, the `key` ability indicates that the type is a resource, meaning it (along with an account address) can be used as a key in global storage.
+In Move on Diem, the `key` ability indicates that a type is a resource, which, along with an account address, can serve as a key in global storage.
 
-On IOTA, the `key` ability indicates that a struct is an object type and comes with an additional requirement that the first field of the struct has signature `id: UID`, to contain the object's unique address on-chain. IOTA's bytecode verifier ensures that new objects are always assigned fresh `UID`s (identifiers are never re-used).
+On IOTA, the `key` ability denotes an object type and requires the struct's first field to have the signature `id: UID`, containing the object's unique address on-chain. IOTA's bytecode verifier ensures that new objects always receive fresh `UID`s, ensuring that identifiers are never reused.
 
-### Module initializers
+### Module Initializers
 
-As described in [Object-centric global storage](#object-centric-global-storage), you publish Move modules into IOTA storage. The IOTA runtime executes a special [initializer function](init.mdx) you optionally define in a module only once at the time of module publication to pre-initialize module-specific data (for example, creating singleton objects).
+As part of the [Object-Centric Global Storage](#object-centric-global-storage) approach, Move modules published into IOTA storage may include an optional `init` function. This initializer runs only once, at the time of module publication, to pre-initialize module-specific data, such as creating singleton objects. See [Module Initializers](init.mdx) for details.
 
-### Entry points take object references as input
+### Entry Points Take Object References as Input
 
-You can call public functions from IOTA transactions (called programmable transaction blocks). These functions can take objects by value, by immutable reference, or by mutable reference. If taken by value, you can destroy the object, wrap it (in another object), or transfer it (to an IOTA ID specified by an address). If taken by mutable reference, the modified version of the object saves to storage without any change in ownership. In any case, the IOTA network authenticates the object and declares its usage as a part of the transaction.
+Public functions in IOTA transactions, also known as programmable transaction blocks, can take objects by value, immutable reference, or mutable reference. When taken by value, the object can be destroyed, wrapped in another object, or transferred to an IOTA ID specified by an address. If taken by mutable reference, the modified object is saved back to storage without any change in ownership. In all cases, the IOTA network authenticates the object and includes its usage as part of the transaction.
 
-In addition to calling public functions, you can call a function that is marked [entry](entry-functions.mdx) even if it is private as long as other non-`entry` functions have not used its inputs.
+Additionally, functions marked with the [entry](entry-functions.mdx) modifier can be invoked directly, even if private, as long as no other non-`entry` functions have used their inputs.
 
+## Explore Concepts
 
-## Explore concepts
-
-Some of the features of Move are defined in this section using commented code examples.
+This section provides an overview of some key concepts in Move, illustrated with commented code examples.
 
 ### Init
 
-The `init` function is a special function that executes only once - when you publish the associated module. See [Init](init.mdx) for details.
+The `init` function is a special function executed only once—during the publication of the associated module. For more information, see [Init](init.mdx).
 
-### Entry functions
+### Entry Functions
 
-The `entry` modifier for functions enables safe and direct invocation of module functions, much like scripts. See [Entry](entry-functions.mdx) for details.
+The `entry` modifier allows safe and direct invocation of module functions, similar to scripts. For more details, see [Entry Functions](entry-functions.mdx).
 
 ### Strings
 
-Move does not have a native type for strings, but it has a useful wrapper. See [Strings](strings.mdx) for examples.
+While Move does not have a native string type, it includes a useful wrapper. See [Strings](strings.mdx) for examples.
 
-### One-time witness
+### One-Time Witness
 
-A one-time witness (OTW) is a special instance of a type created in the module initializer and guaranteed to be unique with only one instance. See [One-Time Witness](one-time-witness.mdx) for an example.
+A one-time witness (OTW) is a unique instance of a type created in the module initializer, guaranteed to be the only instance. For an example, see [One-Time Witness](one-time-witness.mdx).
 
 ### Patterns
 
-Move coding patterns, or techniques, solve logic problems you encounter when developing Move packages for the IOTA blockchain. See the [Patterns](patterns.mdx) section for a list of documented coding patterns.
+Move coding patterns provide solutions to common logic challenges encountered when developing Move packages for the IOTA blockchain. For a list of documented patterns, see the [Patterns](patterns.mdx) section.
+
+
+
+
+
