--- a/docs/content/developer/evm-to-move/creating-nft.mdx
+++ b/docs/content/developer/evm-to-move/creating-nft.mdx
@@ -41,72 +41,7 @@ A lot of logic here is abstracted away, but every bit of logic can be overwritte
 
 IOTA Move is based on objects instead of a global storage like EVM. Objects in IOTA Move can be owned, non-fungible, and unique - the exact properties of an NFT! This makes creating NFTs in IOTA Move very trivial, given that everything is already an NFT by default. An example of a very simplified NFT in IOTA Move:
 
-```move title="examples/Examplenft.move"
-module example::examplenft {
-    use std::string;
-    use iota::event;
-
-    /// An example NFT that can be minted by anybody
-    public struct ExampleNFT has key, store {
-        id: UID,
-        /// Name for the token
-        name: string::String,
-    }
-
-    // ===== Events =====
-
-    public struct NFTMinted has copy, drop {
-        // The Object ID of the NFT
-        object_id: ID,
-        // The creator of the NFT
-        creator: address,
-        // The name of the NFT
-        name: string::String,
-    }
-
-    // ===== Public view functions =====
-
-    /// Get the NFT's `name`
-    public fun name(nft: &ExampleNFT): &string::String {
-        &nft.name
-    }
-
-    // ===== Entrypoints =====
-
-    #[allow(lint(self_transfer))]
-	/// Anyone can mint a new NFT on this one
-    public fun mint_to_sender(
-        name: vector<u8>,
-        ctx: &mut TxContext
-    ) {
-        let sender = tx_context::sender(ctx);
-        let nft = ExampleNFT {
-            id: object::new(ctx),
-            name: string::utf8(name)
-        };
-
-        event::emit(NFTMinted {
-            object_id: object::id(&nft),
-            creator: sender,
-            name: nft.name,
-        });
-
-        transfer::public_transfer(nft, sender);
-    }
-
-    /// Transfer `nft` to `recipient`
-    public fun transfer(
-        nft: ExampleNFT, recipient: address, _: &mut TxContext
-    ) {
-        transfer::public_transfer(nft, recipient)
-    }
-
-    /// Permanently delete `nft`
-    public fun burn(nft: ExampleNFT, _: &mut TxContext) {
-        let ExampleNFT { id, name: _} = nft;
-        object::delete(id)
-    }
-}
+```move file=<rootDir>/docs/examples/move/evm-to-move/sources/nft.move
 ```
 
 This is just a simplified NFT that anyone can mint, with just a name in it as metadata. It can freely be transferred and burned, and the metadata can be directly accessed through the object from another contract. Given that this is just a normal object being created, there's little to add to this code example. It's straightforward if you know the basics of working with objects in IOTA. 
