--- a/docs/content/developer/evm-to-move/creating-token.mdx
+++ b/docs/content/developer/evm-to-move/creating-token.mdx
@@ -34,34 +34,7 @@ IOTA Move takes a radically different approach regarding tokens in terms of owne
 
 The initial creation of `Coin` takes place by minting these coins. This is usually done in a smart contract (module) in IOTA Move and looks like this:
 
-```move title="examples/Exampletoken.move"
-module examples::exampletoken {
-    use std::option;
-    use iota::coin;
-    use iota::transfer;
-    use iota::tx_context::{Self, TxContext};
-
-    /// One-Time-Witness of kind: `Coin<package_object::exampletoken::EXAMPLETOKEN>`
-    struct EXAMPLETOKEN has drop {}
-
-    fun init(witness: EXAMPLETOKEN, ctx: &mut TxContext) {
-        let (treasurycap, metadata) = coin::create_currency(
-            witness,
-            6,                  // decimals
-            b"EXAMPLE",         // symbol
-            b"Example Coin",     // name
-            b"Just an example",  // description
-            option::none(),     // icon URL
-            ctx
-        );
-
-        // transfer the `TreasuryCap` to the sender, admin capabilities
-        transfer::public_transfer(treasurycap, tx_context::sender(ctx));
-
-        // metadata is typically frozen after creation
-        transfer::public_freeze_object(metadata);
-    }
-}
+```move file=<rootDir>/docs/examples/move/evm-to-move/sources/token.move
 ```
 
 There's a lot to unpack here; let's look at it piece by piece. In IOTA Move, there is no 'compiler version' defined within the module itself, like in Solidity.
@@ -70,8 +43,7 @@ A `module` is defined (`exampletoken`) as part of the `examples` package (module
 
 After the aliases, we see an empty struct defined:
 
-```move
-struct EXAMPLETOKEN has drop {}
+```move file=<rootDir>/docs/examples/move/evm-to-move/sources/token.move#L5
 ```
 
 This is the definition of the so-called [One-Time-Witness](../iota-101/move-overview/one-time-witness.mdx). Together with the `init` function definition, this ensures that this `Coin` will only be created once and never more on this chain. 
