--- a/docs/content/developer/iota-101/move-overview/init.mdx
+++ b/docs/content/developer/iota-101/move-overview/init.mdx
@@ -1,41 +1,35 @@
 ---
-title: Module Initializers
+description: Learn about the `init` function in Move modules, including its unique characteristics and proper usage.
 ---
+# Module Initializers
 
-The module initializer function, `init`, is special in that it executes only once - when you publish the associated module - and must have the following properties:
+In Move, the `init` function plays a critical role during the module's lifecycle,
+executing only once at the moment of module publication.
+To ensure proper usage, the `init` function must conform to specific criteria:
 
-- Function name must be `init`
-- The parameter list must end with either a `&mut TxContext` or a `&TxContext` type
-- No return values
-- Private visibility
-- Optionally, the parameter list starts by accepting the module's one-time witness by value
+- **Function Name:** The function must be named `init`.
+- **Parameter List:** The last parameter must be of type `&mut TxContext` or `&TxContext`.
+- **Return Values:** The function must not return any values.
+- **Visibility:** The function should be private.
+- **Optional Parameter:** The parameter list may optionally begin by accepting the module's one-time witness by value.
 
-For example, the following `init` functions are all valid:
+Here are some examples of valid `init` functions:
 
 - `fun init(ctx: &TxContext)`
 - `fun init(ctx: &mut TxContext)`
 - `fun init(otw: EXAMPLE, ctx: &TxContext)`
 - `fun init(otw: EXAMPLE, ctx: &mut TxContext)`
 
-Every function that fits this criteria will be run when the package is first published, and at no other time, including when the package is upgraded. This means that an `init` function that was introduced during an upgrade (to a new or existing module) will never run.
+:::warning 
 
-The following example demonstrates a valid `init` function in a module:
+It's important to note that `init` functions are executed only once when the package is initially published.
+They do not run during subsequent package upgrades.
+If an `init` function is added during an upgrade (whether in a new or existing module), it will not be executed.
+:::
 
-```move
-module examples::one_timer {
-    /// The one of a kind - created in the module initializer.
-    public struct CreatorCapability has key {
-        id: UID
-    }
 
-    /// This function is only called once on module publish.
-    /// Use it to make sure something has happened only once, like
-    /// here - only module author will own a version of a
-    /// `CreatorCapability` struct.
-    fun init(ctx: &mut TxContext) {
-        transfer::transfer(CreatorCapability {
-            id: object::new(ctx),
-        }, tx_context::sender(ctx))
-    }
-}
+Below is an example of a valid `init` function within a Move module:
+
+
+```move file=<rootDir>/docs/examples/move/move-overview/init.move
 ```
